--- a/platformio.ini
+++ b/platformio.ini
@@ -13,8 +13,8 @@ platform = espressif32
 board = nodemcu-32s
 framework = arduino
 lib_ldf_mode = deep
-upload_port = /dev/tty.usbserial-0001
-;upload_port = /dev/tty.usbserial-2
+;upload_port = /dev/tty.usbserial-0001
+upload_port = /dev/tty.usbserial-2
 lib_deps = 
 	256dpi/MQTT@^2.5.0
 	bblanchon/ArduinoJson@^6.18.5
@@ -22,3 +22,4 @@ lib_deps =
 	adafruit/Adafruit NeoMatrix@^1.2.0
 	adafruit/Adafruit GFX Library@^1.10.12
 	https://github.com/tzapu/WiFiManager.git
+	madhephaestus/ESP32Encoder@^0.6.0
